--- a/lab3.ioc
+++ b/lab3.ioc
@@ -1,21 +1,28 @@
 #MicroXplorer Configuration settings - do not modify
+ADC.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC.NbrOfConversionFlag=1
+ADC.Rank-0\#ChannelRegularConversion=1
+ADC.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_4CYCLES
 File.Version=6
 GPIO.groupedBy=
 KeepUserPlacement=false
 Mcu.CPN=STM32L152RBT6
 Mcu.Family=STM32L1
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=TIM2
-Mcu.IPNb=4
+Mcu.IP0=ADC
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM2
+Mcu.IPNb=5
 Mcu.Name=STM32L152R(6-8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PA0-WKUP1
-Mcu.Pin1=PB7
-Mcu.Pin2=VP_SYS_VS_Systick
-Mcu.Pin3=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=4
+Mcu.Pin1=PA1
+Mcu.Pin2=PB7
+Mcu.Pin3=VP_SYS_VS_Systick
+Mcu.Pin4=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=5
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L152RBTx
@@ -36,6 +43,9 @@ NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0-WKUP1.Locked=true
 PA0-WKUP1.Signal=GPXTI0
+PA1.Locked=true
+PA1.Mode=IN1
+PA1.Signal=ADC_IN1
 PB7.Locked=true
 PB7.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
@@ -66,7 +76,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM2_Init-TIM2-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APB1Freq_Value=16000000
 RCC.APB1TimFreq_Value=16000000
