--- a/lab3.ioc
+++ b/lab3.ioc
@@ -28,6 +28,7 @@ Mcu.UserConstants=
 Mcu.UserName=STM32L152RBTx
 MxCube.Version=6.6.1
 MxDb.Version=DB.6.0.60
+NVIC.ADC1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
