--- a/lab3.ioc
+++ b/lab3.ioc
@@ -19,10 +19,11 @@ Mcu.Name=STM32L152R(6-8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PA0-WKUP1
 Mcu.Pin1=PA1
-Mcu.Pin2=PB7
-Mcu.Pin3=VP_SYS_VS_Systick
-Mcu.Pin4=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=5
+Mcu.Pin2=PB6
+Mcu.Pin3=PB7
+Mcu.Pin4=VP_SYS_VS_Systick
+Mcu.Pin5=VP_TIM2_VS_ClockSourceINT
+Mcu.PinsNb=6
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L152RBTx
@@ -47,6 +48,8 @@ PA0-WKUP1.Signal=GPXTI0
 PA1.Locked=true
 PA1.Mode=IN1
 PA1.Signal=ADC_IN1
+PB6.Locked=true
+PB6.Signal=GPIO_Output
 PB7.Locked=true
 PB7.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
